Version=1.2.1022
 - automatisch Aktualisierung Highchart
Version=1.2.1021
 - andere Stromzaehler jetzt OK
 - Zusatzanzeige ob Zaehler in Gesamt und Gruppe
 - Menusystem komplett ueberarbeitet
 - Option in Config fuer zaehlen in Gesamt und Gruppe
 - diverse Fehler behoben
Version=1.2.1018
 - Kalibrierdaten werden in einer Variablen gespeichert
 - andere Stromzaehler werden unterstuetzt
Version=1.2.1017
 - Mysql: Geraetegruppe wird mit abgespeichert
 - css-File fuer eigene Webfrontgestaltung
 - Changelog-Anzeige in der Versionsanzeige
 - Mysql: Logadresse mit in Tabelle Gesamt
 - alternativer Button fuer PlugwiseTab moeglich
 - automatische Benachrichtigung bei neuen Updates
 