@@ -1,4 +1,4 @@
-Version=1.2.1022
+Version=1.2.1023
 ModuleNamespace=IPSLibrary::app::hardware::Plugwise
 
 [App]
